@@ -506,8 +506,7 @@ public class TestCaseResourceTest extends EntityResourceTest<TestCase, CreateTes
   void test_sensitivePIITestCase(TestInfo test) throws IOException {
     // First, create a table with PII Sensitive tag in a column
     TableResourceTest tableResourceTest = new TableResourceTest();
-    CreateTable tableReq =
-            getSensitiveTableReq(test, tableResourceTest);
+    CreateTable tableReq = getSensitiveTableReq(test, tableResourceTest);
     Table sensitiveTable = tableResourceTest.createAndCheckEntity(tableReq, ADMIN_AUTH_HEADERS);
     String sensitiveColumnLink =
         String.format("<#E::table::%s::columns::%s>", sensitiveTable.getFullyQualifiedName(), C1);
@@ -553,20 +552,21 @@ public class TestCaseResourceTest extends EntityResourceTest<TestCase, CreateTes
     assertEquals(0, maskedTestCases.getData().get(0).getParameterValues().size());
   }
 
-  private static CreateTable getSensitiveTableReq(TestInfo test, TableResourceTest tableResourceTest) {
+  private static CreateTable getSensitiveTableReq(
+      TestInfo test, TableResourceTest tableResourceTest) {
     return tableResourceTest
-            .createRequest(test)
-            .withName("sensitiveTableTest")
-            .withDatabaseSchema(DATABASE_SCHEMA.getFullyQualifiedName())
-            .withOwner(USER1_REF)
-            .withColumns(
-                    List.of(
-                            new Column()
-                                    .withName(C1)
-                                    .withDisplayName("c1")
-                                    .withDataType(ColumnDataType.VARCHAR)
-                                    .withDataLength(10)
-                                    .withTags(List.of(PII_SENSITIVE_TAG_LABEL))));
+        .createRequest(test)
+        .withName("sensitiveTableTest")
+        .withDatabaseSchema(DATABASE_SCHEMA.getFullyQualifiedName())
+        .withOwner(USER1_REF)
+        .withColumns(
+            List.of(
+                new Column()
+                    .withName(C1)
+                    .withDisplayName("c1")
+                    .withDataType(ColumnDataType.VARCHAR)
+                    .withDataLength(10)
+                    .withTags(List.of(PII_SENSITIVE_TAG_LABEL))));
   }
 
   @Test
@@ -2083,12 +2083,14 @@ public class TestCaseResourceTest extends EntityResourceTest<TestCase, CreateTes
 
   @Test
   void put_failedRowSample_200(TestInfo test) throws IOException {
-    CreateTestCase create = createRequest(test)
-        .withEntityLink(TABLE_LINK)
-        .withTestSuite(TEST_SUITE1.getFullyQualifiedName())
-        .withTestDefinition(TEST_DEFINITION3.getFullyQualifiedName())
-        .withParameterValues(
-            List.of(new TestCaseParameterValue().withValue("100").withName("missingCountValue")));
+    CreateTestCase create =
+        createRequest(test)
+            .withEntityLink(TABLE_LINK)
+            .withTestSuite(TEST_SUITE1.getFullyQualifiedName())
+            .withTestDefinition(TEST_DEFINITION3.getFullyQualifiedName())
+            .withParameterValues(
+                List.of(
+                    new TestCaseParameterValue().withValue("100").withName("missingCountValue")));
     TestCase testCase = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
     List<String> columns = Arrays.asList(C1, C2, C3);
 
@@ -2117,45 +2119,43 @@ public class TestCaseResourceTest extends EntityResourceTest<TestCase, CreateTes
   void test_sensitivePIISampleData(TestInfo test) throws IOException {
     // Create table with owner and a column tagged with PII.Sensitive
     TableResourceTest tableResourceTest = new TableResourceTest();
-    CreateTable tableReq =
-            getSensitiveTableReq(test, tableResourceTest);
+    CreateTable tableReq = getSensitiveTableReq(test, tableResourceTest);
     Table sensitiveTable = tableResourceTest.createAndCheckEntity(tableReq, ADMIN_AUTH_HEADERS);
     String sensitiveColumnLink =
-            String.format("<#E::table::%s::columns::%s>", sensitiveTable.getFullyQualifiedName(), C1);
-    CreateTestCase create = createRequest(test)
+        String.format("<#E::table::%s::columns::%s>", sensitiveTable.getFullyQualifiedName(), C1);
+    CreateTestCase create =
+        createRequest(test)
             .withEntityLink(sensitiveColumnLink)
             .withTestSuite(TEST_SUITE1.getFullyQualifiedName())
             .withTestDefinition(TEST_DEFINITION3.getFullyQualifiedName())
             .withParameterValues(
-                    List.of(new TestCaseParameterValue().withValue("100").withName("missingCountValue")));
+                List.of(
+                    new TestCaseParameterValue().withValue("100").withName("missingCountValue")));
     TestCase testCase = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
     List<String> columns = List.of(C1);
     // Add 3 rows of sample data
     List<List<Object>> rows =
-            Arrays.asList(
-                    List.of("c1Value1"),
-                    List.of("c1Value2"),
-                    List.of("c1Value3"));
+        Arrays.asList(List.of("c1Value1"), List.of("c1Value2"), List.of("c1Value3"));
     // add sample data
     putSampleData(testCase, columns, rows, ADMIN_AUTH_HEADERS);
     // assert values are not masked for the table owner
     TableData data = getSampleData(testCase.getId(), authHeaders(USER1.getName()));
     assertFalse(
-            data.getRows().stream()
-                    .flatMap(List::stream)
-                    .map(r -> r == null ? "" : r)
-                    .map(Object::toString)
-                    .anyMatch(MASKED_VALUE::equals));
+        data.getRows().stream()
+            .flatMap(List::stream)
+            .map(r -> r == null ? "" : r)
+            .map(Object::toString)
+            .anyMatch(MASKED_VALUE::equals));
     // assert values are masked when is not the table owner
     data = getSampleData(testCase.getId(), authHeaders(USER2.getName()));
     assertEquals(
-            3,
-            data.getRows().stream()
-                    .flatMap(List::stream)
-                    .map(r -> r == null ? "" : r)
-                    .map(Object::toString)
-                    .filter(MASKED_VALUE::equals)
-                    .count());
+        3,
+        data.getRows().stream()
+            .flatMap(List::stream)
+            .map(r -> r == null ? "" : r)
+            .map(Object::toString)
+            .filter(MASKED_VALUE::equals)
+            .count());
   }
 
   private void putSampleData(
